# ai-study-assistant

./: .gitignore  README.md
backend-ai-study-assistant/: README.md  pyproject.toml  requirements.txt
backend-ai-study-assistant/src/: main.py
frontend-ai-study-assistant/: README.md  package-lock.json  package.json
frontend-ai-study-assistant/public/: index.html  manifest.json
frontend-ai-study-assistant/src/: App.jsx  index.css  index.js  router.jsx
frontend-ai-study-assistant/src/components/: FlipCard.jsx  MainLayout.jsx  PDFResults.jsx  UploadPDF.jsx
frontend-ai-study-assistant/src/pages/: Home.jsx  HowItWorks.jsx  Summary.jsx  Upload.jsx
frontend-ai-study-assistant/src/services/: assistant.js  summaries.js
